# ml-deep-learning-study

./: .gitignore  README.md  pyproject.toml  test.py
src/ml_example/: california_housing_regression.py  regularization_comparison.py  wine_classification.py
src/notebook/: 1-1_fish_knn.ipynb  1-3.ipynb  2-1.ipynb  2-1_train_test_split.ipynb  2-2.ipynb  2-2_data_processing.ipynb  2_4_knn_tutorial.ipynb  2_5_data_preprocessing.ipynb  3-1.ipynb  3-1_knn_regression.ipynb  3-2.ipynb  3-2_linear_regression.ipynb  3-3.ipynb  3-3_regularization.ipynb  3-4_softmax.py  3_best_k.py  3_knn_optimal_k.ipynb  3_test.ipynb  4-1.ipynb  4-1_logistic_regression.ipynb  4-2.ipynb  4-2_grdient_descent.py  4-3_SGD.ipynb  4_3_loss_function.py  4_4_loss_function.py  4_5_twitter_sentiment_analysis.ipynb  5-1.ipynb  5-1_decision_tree.ipynb  5-2.ipynb  5-3.ipynb  5-3_ensemble_tree.ipynb  6-1.ipynb  6-1_clustering.ipynb  6-2.ipynb  6-2_kmeans.ipynb  6-3_pca.ipynb  6-4_pca_example.py  7-1.ipynb  7-2.ipynb  7-3.ipynb  (+5 more)
src/notebook/dataset/: fish.csv  twitter_validation.csv
