[project]
name = "ml-deep-learning-study"
version = "0.1.0"
description = "ML and Deep Learning Practice Repository"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "anthropic>=0.64.0",
    "beautifulsoup4>=4.13.4",
    "gensim==4.3.2",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.7",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "numpy>=1.26.0",
    "openai>=1.99.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyldavis>=3.4.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "transformers>=4.56.1",
    "wordcloud>=1.9.4",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "tensorflow==2.15.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "pytest>=8.4.1",
]
